--- a/style.css
+++ b/style.css
@@ -26,6 +26,9 @@
 .wave1-banner{
      width: 100%!important;
 }
+.lead{
+  color: #f8f9fa;
+}
 /*--SERVICES SECTION START HERE--*/
 .title{
     text-align: center;
